translation-tool/inputs/source_meta/objects/HSvc_FieldMapping__c.object
<CustomObject>
    <description>This object will store the field mappings required for Cases-Activities, Rule Services and Templates</description>
    <fields>
        <fullName>ECOB_CurrentPageURL__c</fullName>
        <label>Current Page URL</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECOB_CustomSettingField__c</fullName>
        <description>This field stores the corresponding ECOB_WizardUserPermissions__c custom setting field which stores the user permission to display the page apart from Task Owner</description>
        <label>Custom Setting Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECOB_IsPreviousTaskRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check whether if Previous Task is Required</description>
        <label>Is Previous Task Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECOB_NextTaskType__c</fullName>
        <description>The Next Task for current Task</description>
        <label>Next Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify / Create Customer</fullName>
                </value>
                <value>
                    <fullName>Assign Customer On Boarding Tasks</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Products per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Product Relationship</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Specific Attribute for Selected Products (Optional)</fullName>
                </value>
                <value>
                    <fullName>Define and Update Billing Specification per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Ordering Templates for a Location</fullName>
                </value>
                <value>
                    <fullName>Setup Rollouts (Optional)</fullName>
                </value>
                <value>
                    <fullName>Upload Bulk Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECOB_PreviousTaskType__c</fullName>
        <description>The Previous Task for current Task</description>
        <label>Previous Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify / Create Customer</fullName>
                </value>
                <value>
                    <fullName>Assign Customer On Boarding Tasks</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Products per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Product Relationship</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Specific Attribute for Selected Products (Optional)</fullName>
                </value>
                <value>
                    <fullName>Define and Update Billing Specification per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Ordering Templates for a Location</fullName>
                </value>
                <value>
                    <fullName>Setup Rollouts (Optional)</fullName>
                </value>
                <value>
                    <fullName>Upload Bulk Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECOB_TaskShortName__c</fullName>
        <description>Task Short Name to display on Wizard</description>
        <label>Task Short Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Search Customer</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>Customer Products</fullName>
                </value>
                <value>
                    <fullName>Product Relationships</fullName>
                </value>
                <value>
                    <fullName>Product Attributes</fullName>
                </value>
                <value>
                    <fullName>Billing Spec</fullName>
                </value>
                <value>
                    <fullName>Ordering Templates</fullName>
                </value>
                <value>
                    <fullName>Setup Rollouts (Optional)</fullName>
                </value>
                <value>
                    <fullName>Upload Bulk Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECOB_TaskType__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_TargetObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Identify / Create Customer</fullName>
                </value>
                <value>
                    <fullName>Assign Customer On Boarding Tasks</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Products per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Product Relationship</fullName>
                </value>
                <value>
                    <fullName>Define and Update Customer Specific Attribute for Selected Products (Optional)</fullName>
                </value>
                <value>
                    <fullName>Define and Update Billing Specification per Contract</fullName>
                </value>
                <value>
                    <fullName>Define and Update Ordering Templates for a Location</fullName>
                </value>
                <value>
                    <fullName>Setup Rollouts (Optional)</fullName>
                </value>
                <value>
                    <fullName>Upload Bulk Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECOB_WizardPercentage__c</fullName>
        <description>This captures the Wizard Percentage when user is in particular Task Type</description>
        <label>Wizard Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityMappingType__c</fullName>
        <description>The Activity Mapping Type Field Mapping</description>
        <label>Activity Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Receive Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_IsRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Related Field</description>
        <label>Is Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_RelationshipField__c</fullName>
        <description>Relationship field API Name</description>
        <inlineHelpText>Give API Name of the Relationship field. If it is Custom field append with &apos;__r&apos; instead of &apos;__c&apos;.
Ex: For Account field on Case = &apos;Account&apos;
For Custom field Template on Case=&apos;Template__r&apos;</inlineHelpText>
        <label>Relationship Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SourceObject__c</fullName>
        <description>Source Object</description>
        <label>Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>HSvc_CaseTemplate__c</fullName>
                </value>
                <value>
                    <fullName>HSvc_WorkOrder__c</fullName>
                </value>
                <value>
                    <fullName>Page URL</fullName>
                </value>
                <value>
                    <fullName>Event Maintenance Rules</fullName>
                </value>
                <value>
                    <fullName>Operational SLA Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Source__c</fullName>
        <description>Source</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_TargetField__c</fullName>
        <description>Target Field</description>
        <label>Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_TargetObject__c</fullName>
        <description>Target Object</description>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Task/Activity</fullName>
                </value>
                <value>
                    <fullName>Case Creation Rule</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Work Order Activity</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>ECOB Task</fullName>
                </value>
                <value>
                    <fullName>Parent Case</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Type__c</fullName>
        <description>Type for which this record is applicable</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>CaseCreationRule</fullName>
                </value>
                <value>
                    <fullName>Quick Case create</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>ECOB Task-Page Mapping</fullName>
                </value>
                <value>
                    <fullName>Case Activity Mapping</fullName>
                </value>
                <value>
                    <fullName>Event Rule Parent Case Mapping</fullName>
                </value>
                <value>
                    <fullName>Event Rule WorkOrder Mapping</fullName>
                </value>
                <value>
                    <fullName>Operational SLA Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ValueField__c</fullName>
        <label>Value/Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Mapping</label>
    <listViews>
        <fullName>Activity_Mapping</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Type__c</columns>
        <columns>HSvc_SourceObject__c</columns>
        <columns>HSvc_Source__c</columns>
        <columns>HSvc_ValueField__c</columns>
        <columns>HSvc_TargetObject__c</columns>
        <columns>HSvc_TargetField__c</columns>
        <columns>HSvc_IsRelated__c</columns>
        <columns>HSvc_ActivityMappingType__c</columns>
        <filterScope>Everything</filterScope>
        <label>Activity Mapping</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Type__c</columns>
        <columns>HSvc_Source__c</columns>
        <columns>HSvc_SourceObject__c</columns>
        <columns>HSvc_TargetField__c</columns>
        <columns>HSvc_TargetObject__c</columns>
        <columns>HSvc_ValueField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ECOB_Wizard_Mapping</fullName>
        <columns>NAME</columns>
        <columns>ECOB_TaskType__c</columns>
        <columns>ECOB_TaskShortName__c</columns>
        <columns>ECOB_IsPreviousTaskRequired__c</columns>
        <columns>ECOB_PreviousTaskType__c</columns>
        <columns>ECOB_NextTaskType__c</columns>
        <columns>ECOB_CurrentPageURL__c</columns>
        <columns>ECOB_CustomSettingField__c</columns>
        <columns>ECOB_WizardPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_FieldMapping__c.ECOB_Assignment</value>
        </filters>
        <label>ECOB Wizard Mapping</label>
    </listViews>
    <nameField>
        <displayFormat>FMN-{00000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mapping</pluralLabel>
    <recordTypes>
        <fullName>ECOB_Assignment</fullName>
        <active>true</active>
        <description>The Record Type to maintain ECOB Assignment specific fields</description>
        <label>ECOB Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hughes_R3FieldMapping</fullName>
        <active>true</active>
        <description>Record Type to maintain R3 Field mapping</description>
        <label>Hughes R3 Field Mapping</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>